@@ -24,6 +24,8 @@ const (
 
 // Build info
 var BRANCH = "$"
+var SIGNALPROFILE = "$"
+var SIGNALSTACK = "$"
 
 const (
 	APPNAME = "mongoshake"
