@@ -45,10 +45,10 @@
 			"revisionTime": "2019-09-04T06:34:54Z"
 		},
 		{
-			"checksumSHA1": "63olncsMU/K9MMKxt4zuKSyoNg0=",
+			"checksumSHA1": "52vjznwP2OHubLvZkLCUCC9Gp5o=",
 			"path": "github.com/gugemichael/nimo4go",
-			"revision": "cbcfac21339d78efaed9ed09dcba7296d9976118",
-			"revisionTime": "2018-09-04T03:08:18Z"
+			"revision": "32795d80f83ab8c37b47589c5068dfbb14545c34",
+			"revisionTime": "2019-09-04T07:30:57Z"
 		},
 		{
 			"checksumSHA1": "5AxXPtBqAKyFGcttFzxT5hp/3Tk=",
